--- a/stage-01/index.html
+++ b/stage-01/index.html
@@ -18,7 +18,7 @@
                 <p class="date" data-testid="currentDayOfTheWeek"></p>
                 <p class="time" data-testid="currentUTCTime"></p>
             </div>
-            <a href="#" data-testid=“githubURL”><i class="fa-brands fa-github"></i><span>Click here to view the codes</span></a>
+            <a href="https://github.com/Ubaidullah-M/HNGx" data-testid=“githubURL”><i class="fa-brands fa-github"></i><span>Click here to view the codes</span></a>
         </div>
         <div class="image">
             <img src="https://ca.slack-edge.com/T05FFAA91JP-U05R8R6JHQV-49634afba785-192" alt="Ubaid" data-testid="slackDisplayImage">
